Some Yaml compatibility fixes
1) Quote strings with #
2) Use yes for booleans

Change-Id: I0dffb5518bf658a9ff9e37359c32c7006d904e1c

--- a/groups/Mwlib/Mwlibrl.yaml
+++ b/groups/Mwlib/Mwlibrl.yaml
@@ -6,7 +6,7 @@ BASIC:
   description: "{{int:bw-desc-mwlibrl}}"
   namespace: NS_MWLIB
   class: FileBasedMessageGroup
-  codeBrowser: https://github.com/pediapress/mwlib.rl/blob/master/%FILE%#L%LINE%
+  codeBrowser: "https://github.com/pediapress/mwlib.rl/blob/master/%FILE%#L%LINE%"
 
 FILES:
   class: GettextFFS
