Add Vector and Monobook skins to main Wikimedia extensions
The skins have messages to translate and their functionality
is pretty much the same as of the extensions.
Follows up on 9779b5db

Change-Id: Ifb25894628c860dc6d4af45b8b7268e0d533d6da

--- a/groups/MediaWiki/WikimediaMainAgg.yaml
+++ b/groups/MediaWiki/WikimediaMainAgg.yaml
@@ -57,3 +57,5 @@ GROUPS:
   - ext-wikimediaevents # 2013-10-07: Renamed from CoreEvents
   - ext-wikimedialicensetexts # commons.wikimedia.org
   - ext-wikimediamessages
+  - mediawiki-skins-monobook
+  - mediawiki-skins-vector
