Ignore <zero webpage url> in the Wikipedia app
According to qqq, this message is not to be translated.

Change-Id: I7c72a19b284af19db9078e06a969aa159c86cf35

--- a/groups/Wikimedia/WikimediaMobile-android.yaml
+++ b/groups/Wikimedia/WikimediaMobile-android.yaml
@@ -248,3 +248,7 @@ MANGLER:
 FILES:
   sourcePattern: %GROUPROOT%/wikipedia-android/wikipedia/res/values-%CODE%/strings.xml
   definitionFile: %GROUPROOT%/wikipedia-android/wikipedia/res/values/strings.xml
+
+TAGS:
+  ignored:
+    - wikipedia-android-strings-zero_webpage_url
