Replace space with underscore in an optional message key
Change-Id: I3213f36efc7c6268c18ba4bcd0124bc38900bc15

--- a/groups/Wikimedia/WikimediaMobile-android.yaml
+++ b/groups/Wikimedia/WikimediaMobile-android.yaml
@@ -221,7 +221,7 @@ FILES:
 
 TAGS:
   optional:
-    - commons-android-strings-hello world
+    - commons-android-strings-hello_world
 
 ---
 BASIC:
