--- a/groups/MediaWiki/WikimediaAgg.yaml
+++ b/groups/MediaWiki/WikimediaAgg.yaml
@@ -77,6 +77,7 @@ GROUPS:
   - ext-openstackmanager # 2011-12-28: labsconsole.wikimedia.org
   - ext-pageimages # 2012 on all wikis
   - ext-parsoid # All wikis
+  - ext-petition # 2014-04-22: Foundationwiki
   - ext-poem
   - ext-popups # 2014-03-19
   - ext-proofreadpage # Wikisource
