HHVM needs include path for running phpunit
Change-Id: I8d4d3e7548ce5b33a1240477025dcac4ff5b5c15

--- a/puppet/modules/hhvm/files/php.ini
+++ b/puppet/modules/hhvm/files/php.ini
@@ -3,6 +3,7 @@
 ; php options
 pid = /run/hhvm/pid
 date.timezone = 'UTC'
+include_path = '.:/usr/share/php'
 
 ; hhvm specific
 hhvm.server.ip = 127.0.0.1
