Add useful logging option to hhvm
Change-Id: I175291def7657ab3c5ec84810469b178c5c51e41

--- a/puppet/modules/hhvm/files/php.ini
+++ b/puppet/modules/hhvm/files/php.ini
@@ -24,6 +24,7 @@ hhvm.log.use_syslog = false
 hhvm.log.file = /var/log/hhvm/error.log
 hhvm.log.access.file = /var/log/hhvm/access.log
 hhvm.log.access.format = %h %l %u % t \”%r\” %>s %b
+hhvm.log.header = true
 
 hhvm.repo.central.path = /run/hhvm/hhvm.hhbc
 
