Optional messages in Android app
Change-Id: I9210da6463eb789a61705cc50dad2642f67561f4

--- a/groups/Wikimedia/WikimediaMobile-android.yaml
+++ b/groups/Wikimedia/WikimediaMobile-android.yaml
@@ -218,3 +218,6 @@ FILES:
 TAGS:
   ignored:
     - wikipedia-android-strings-zero_webpage_url
+  optional:
+    - wikipedia-android-strings-privacy_policy_url
+    - wikipedia-android-strings-terms_of_use_url
