[Core] 2 messages are now to ignore
https://gerrit.wikimedia.org/r/#/c/151653/1/languages/i18n/qqq.json,unified

Change-Id: I5efee506e84295aa75498bd3315789ee75862969

--- a/groups/MediaWiki/MediaWiki.yaml
+++ b/groups/MediaWiki/MediaWiki.yaml
@@ -415,6 +415,7 @@ TAGS:
     - noarticletextanon
     - number_of_watching_users_RCview
     - opensearch-desc
+    - overwroteimage
     - pagecategorieslink
     - pageinfo-footer
     - pageinfo-header
@@ -487,6 +488,7 @@ TAGS:
     - unwatchedpages-summary
     - upload-default-description
     - upload-summary
+    - uploadedimage
     - uploadfooter
     - userlogout-summary
     - userrights-summary
